# thorsten-prism-rust-blog-ideas

./: .justfile  Cargo.toml  README.md
.github/: settings.yml
src/: lib.rs
