[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""prism"""
edition    ="2021"
name       ="prism"
repository ="https://github.com/thor314/prism"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
log       ="0.4" 
reqwest = "0.12.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
env_logger="0.11"
